@@ -3710,6 +3710,24 @@ def command_context_add_mame_fav(machine_name):
     kodi_notify('Machine {0} added to MAME Favourites'.format(machine_name))
     kodi_refresh_container()
 
+def command_show_mame_fav():
+    log_debug('command_show_mame_fav() Starting ...')
+
+    # --- Open Favourite Machines dictionary ---
+    fav_machines = fs_load_JSON_file_dic(g_PATHS.FAV_MACHINES_PATH.getPath())
+    if not fav_machines:
+        kodi_dialog_OK('No Favourite MAME machines. Add some machines to MAME Favourites first.')
+        xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
+        return
+
+    # --- Render Favourites ---
+    set_Kodi_all_sorting_methods()
+    for m_name in fav_machines:
+        machine = fav_machines[m_name]
+        assets  = machine['assets']
+        render_fav_machine_row(m_name, machine, assets, LOCATION_MAME_FAVS)
+    xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
+
 #
 # Context menu "Manage Favourite machines"
 #
@@ -3731,24 +3749,25 @@ def command_context_manage_mame_fav(machine_name):
     }
 
     # --- Determine view type ---
-    log_debug('command_context_manage_mame_fav() machine_name "{0}"'.format(machine_name))
+    log_debug('command_context_manage_mame_fav() BEGIN ...')
+    log_debug('machine_name "{0}"'.format(machine_name))
     if machine_name:
         view_type = VIEW_INSIDE_MENU
     else:
         view_type = VIEW_ROOT_MENU
-    log_debug('command_context_manage_mame_fav() view_type = {0}'.format(view_type))
+    log_debug('view_type = {0}'.format(view_type))
 
     # --- Build menu base on view_type (Polymorphic menu, determine action) ---
     d_list = [menu[0] for menu in menus_dic[view_type]]
-    selected_value = xbmcgui.Dialog().select('Manage Favourite machines', d_list)
+    selected_value = xbmcgui.Dialog().select('Manage MAME Favourite machines', d_list)
     if selected_value < 0: return
     action = menus_dic[view_type][selected_value][1]
-    log_debug('command_context_manage_mame_fav() action = {0}'.format(action))
+    log_debug('action = {0}'.format(action))
 
-    # --- Delete machine from MAME Favourites ---
+    # --- Execute actions ---
     if action == ACTION_DELETE_MACHINE:
         log_debug('command_context_manage_mame_fav() ACTION_DELETE_MACHINE')
-        log_debug('command_context_manage_mame_fav() Machine_name "{0}"'.format(machine_name))
+        log_debug('machine_name "{0}"'.format(machine_name))
 
         # --- Open Favourite Machines dictionary ---
         fav_machines = fs_load_JSON_file_dic(g_PATHS.FAV_MACHINES_PATH.getPath())
@@ -3760,7 +3779,7 @@ def command_context_manage_mame_fav(machine_name):
 
         # --- Delete machine and save DB ---
         del fav_machines[machine_name]
-        log_info('command_context_manage_mame_fav() Deleted machine "{0}"'.format(machine_name))
+        log_info('Deleted machine "{0}"'.format(machine_name))
         fs_write_JSON_file(g_PATHS.FAV_MACHINES_PATH.getPath(), fav_machines)
         kodi_refresh_container()
         kodi_notify('Machine {0} deleted from MAME Favourites'.format(machine_name))
@@ -3812,24 +3831,6 @@ def command_context_manage_mame_fav(machine_name):
         t = 'Wrong action == {0}. This is a bug, please report it.'.format(action)
         log_error(t)
         kodi_dialog_OK(t)
-
-def command_show_mame_fav():
-    log_debug('command_show_mame_fav() Starting ...')
-
-    # --- Open Favourite Machines dictionary ---
-    fav_machines = fs_load_JSON_file_dic(g_PATHS.FAV_MACHINES_PATH.getPath())
-    if not fav_machines:
-        kodi_dialog_OK('No Favourite MAME machines. Add some machines to MAME Favourites first.')
-        xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
-        return
-
-    # --- Render Favourites ---
-    set_Kodi_all_sorting_methods()
-    for m_name in fav_machines:
-        machine = fav_machines[m_name]
-        assets  = machine['assets']
-        render_fav_machine_row(m_name, machine, assets, LOCATION_MAME_FAVS)
-    xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
 
 def render_fav_machine_row(m_name, machine, m_assets, location):
     # --- Default values for flags ---
@@ -3968,6 +3969,30 @@ def command_context_add_sl_fav(SL_name, ROM_name):
     fs_write_JSON_file(g_PATHS.FAV_SL_ROMS_PATH.getPath(), fav_SL_roms)
     kodi_notify('ROM {0} added to SL Favourite ROMs'.format(ROM_name))
 
+def command_show_sl_fav():
+    log_debug('command_show_sl_fav() Starting ...')
+
+    # >> Load Software List ROMs
+    SL_catalog_dic = fs_load_JSON_file_dic(g_PATHS.SL_INDEX_PATH.getPath())
+
+    # >> Open Favourite Machines dictionary
+    fav_SL_roms = fs_load_JSON_file_dic(g_PATHS.FAV_SL_ROMS_PATH.getPath())
+    if not fav_SL_roms:
+        kodi_dialog_OK('No Favourite Software Lists ROMs. Add some ROMs to SL Favourites first.')
+        xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
+        return
+
+    # >> Render Favourites
+    set_Kodi_all_sorting_methods()
+    for SL_fav_key in fav_SL_roms:
+        SL_fav_ROM = fav_SL_roms[SL_fav_key]
+        assets = SL_fav_ROM['assets']
+        # >> Add the SL name as 'genre'
+        SL_name = SL_fav_ROM['SL_name']
+        SL_fav_ROM['genre'] = SL_catalog_dic[SL_name]['display_name']
+        render_sl_fav_machine_row(SL_fav_key, SL_fav_ROM, assets, LOCATION_SL_FAVS)
+    xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
+
 #
 # Context menu "Manage SL Favourite ROMs"
 #   * 'Choose default machine for SL ROM'
@@ -4050,30 +4075,6 @@ def command_context_manage_sl_fav(SL_name, ROM_name):
         fs_write_JSON_file(g_PATHS.FAV_SL_ROMS_PATH.getPath(), fav_SL_roms)
         kodi_refresh_container()
         kodi_notify('SL Item {0}-{1} deleted from SL Favourites'.format(SL_name, ROM_name))
-
-def command_show_sl_fav():
-    log_debug('command_show_sl_fav() Starting ...')
-
-    # >> Load Software List ROMs
-    SL_catalog_dic = fs_load_JSON_file_dic(g_PATHS.SL_INDEX_PATH.getPath())
-
-    # >> Open Favourite Machines dictionary
-    fav_SL_roms = fs_load_JSON_file_dic(g_PATHS.FAV_SL_ROMS_PATH.getPath())
-    if not fav_SL_roms:
-        kodi_dialog_OK('No Favourite Software Lists ROMs. Add some ROMs to SL Favourites first.')
-        xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
-        return
-
-    # >> Render Favourites
-    set_Kodi_all_sorting_methods()
-    for SL_fav_key in fav_SL_roms:
-        SL_fav_ROM = fav_SL_roms[SL_fav_key]
-        assets = SL_fav_ROM['assets']
-        # >> Add the SL name as 'genre'
-        SL_name = SL_fav_ROM['SL_name']
-        SL_fav_ROM['genre'] = SL_catalog_dic[SL_name]['display_name']
-        render_sl_fav_machine_row(SL_fav_key, SL_fav_ROM, assets, LOCATION_SL_FAVS)
-    xbmcplugin.endOfDirectory(handle = g_addon_handle, succeeded = True, cacheToDisc = False)
 
 def render_sl_fav_machine_row(SL_fav_key, ROM, assets, location):
     SL_name  = ROM['SL_name']
@@ -4173,32 +4174,105 @@ def command_show_mame_most_played():
     xbmcplugin.endOfDirectory(g_addon_handle, succeeded = True, cacheToDisc = False)
 
 def command_context_manage_mame_most_played(machine_name):
-    dialog = xbmcgui.Dialog()
-    idx = dialog.select('Manage MAME Most Played', 
-                       ['Delete machine from MAME Most Played machines'])
-    if idx < 0: return
+    VIEW_ROOT_MENU   = 100
+    VIEW_INSIDE_MENU = 200
 
-    # --- Delete machine from MAME Most Played machines ---
-    if idx == 0:
-        log_debug('command_context_manage_mame_most_played() Delete MAME machine')
-        log_debug('command_context_manage_mame_most_played() Machine_name "{0}"'.format(machine_name))
+    ACTION_DELETE_MACHINE = 100
+    ACTION_DELETE_MISSING = 200
 
-        # >> Load Most Played machines dictionary
+    menus_dic = {
+        VIEW_ROOT_MENU : [
+            ('Delete missing machines from MAME Most Played', ACTION_DELETE_MISSING),
+        ],
+        VIEW_INSIDE_MENU : [
+            ('Delete machine from MAME Most Played', ACTION_DELETE_MACHINE),
+            ('Delete missing machines from MAME Most Played', ACTION_DELETE_MISSING),
+        ],
+    }
+
+    # --- Determine view type ---
+    log_debug('command_context_manage_mame_most_played() BEGIN ...')
+    log_debug('machine_name "{0}"'.format(machine_name))
+    if machine_name:
+        view_type = VIEW_INSIDE_MENU
+    else:
+        view_type = VIEW_ROOT_MENU
+    log_debug('view_type = {0}'.format(view_type))
+
+    # --- Build menu base on view_type (Polymorphic menu, determine action) ---
+    d_list = [menu[0] for menu in menus_dic[view_type]]
+    selected_value = xbmcgui.Dialog().select('Manage MAME Most Played machines', d_list)
+    if selected_value < 0: return
+    action = menus_dic[view_type][selected_value][1]
+    log_debug('action = {0}'.format(action))
+
+    # --- Execute actions ---
+    if action == ACTION_DELETE_MACHINE:
+        log_debug('command_context_manage_mame_most_played() ACTION_DELETE_MACHINE')
+        log_debug('machine_name "{0}"'.format(machine_name))
+
+        # --- Load Most Played machines dictionary ---
         most_played_roms_dic = fs_load_JSON_file_dic(g_PATHS.MAME_MOST_PLAYED_FILE_PATH.getPath())
 
-        # >> Ask user for confirmation.
+        # --- Ask user for confirmation ---
         desc = most_played_roms_dic[machine_name]['description']
         ret = kodi_dialog_yesno('Delete Machine {0} ({1})?'.format(desc, machine_name))
         if ret < 1: return
 
-        # >> Delete machine
+        # --- Delete machine and save DB ---
         del most_played_roms_dic[machine_name]
-        log_info('command_context_manage_mame_most_played() Deleted machine "{0}"'.format(machine_name))
-
-        # >> Save Favourites
+        log_info('Deleted machine "{0}"'.format(machine_name))
         fs_write_JSON_file(g_PATHS.MAME_MOST_PLAYED_FILE_PATH.getPath(), most_played_roms_dic)
         kodi_refresh_container()
         kodi_notify('Machine {0} deleted from MAME Most Played'.format(machine_name))
+
+    elif action == ACTION_DELETE_MISSING:
+        log_debug('command_context_manage_mame_fav() ACTION_DELETE_MISSING')
+
+        # --- Ensure MAME Catalog have been built ---
+        control_dic = fs_load_JSON_file_dic(g_PATHS.MAIN_CONTROL_PATH.getPath())
+        # mame_check_condition(MAME_CATALOG_BUILT)
+
+        # --- Load databases ---
+        db_files = [
+            ['machines', 'MAME machines main', g_PATHS.MAIN_DB_PATH.getPath()],
+            ['most_played_roms_dic', 'MAME Most Played machines', g_PATHS.MAME_MOST_PLAYED_FILE_PATH.getPath()],
+        ]
+        db_dic = fs_load_files(db_files)
+
+        # --- Delete missing MAME machines ---
+        line1_str = 'Delete missing MAME Most Played ...'
+        pDialog = xbmcgui.DialogProgress()
+        pDialog.create('Advanced MAME Launcher', line1_str)
+        num_deleted_machines = 0
+        if len(db_dic['most_played_roms_dic']) >= 1:
+            num_iteration = len(db_dic['most_played_roms_dic'])
+            iteration = 0
+            new_fav_machines = {}
+            for fav_key in sorted(db_dic['most_played_roms_dic']):
+                pDialog.update((iteration*100) // num_iteration, line1_str)
+                log_debug('Checking Favourite "{0}"'.format(fav_key))
+                if fav_key in db_dic['machines']:
+                    new_fav_machines[fav_key] = db_dic['most_played_roms_dic'][fav_key]
+                else:
+                    num_deleted_machines += 1
+                iteration += 1
+            fs_write_JSON_file(g_PATHS.FAV_MACHINES_PATH.getPath(), new_fav_machines)
+            pDialog.update((iteration*100) // num_iteration, line1_str)
+        else:
+            # fs_write_JSON_file(g_PATHS.FAV_MACHINES_PATH.getPath(), new_fav_machines)
+            pDialog.update(100, line1_str)
+        pDialog.close()
+        kodi_refresh_container()
+        if num_deleted_machines > 0:
+            kodi_notify('Deleted {0} missing MAME machines'.format(num_deleted_machines))
+        else:
+            kodi_notify('No missing machines found')
+
+    else:
+        t = 'Wrong action == {0}. This is a bug, please report it.'.format(action)
+        log_error(t)
+        kodi_dialog_OK(t)
 
 def command_show_mame_recently_played():
     recent_roms_list = fs_load_JSON_file_list(g_PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath())
@@ -4213,39 +4287,112 @@ def command_show_mame_recently_played():
     xbmcplugin.endOfDirectory(g_addon_handle, succeeded = True, cacheToDisc = False)
 
 def command_context_manage_mame_recent_played(machine_name):
-    dialog = xbmcgui.Dialog()
-    idx = dialog.select('Manage MAME Recently Played', 
-                       ['Delete machine from MAME Recently Played machines'])
-    if idx < 0: return
+    VIEW_ROOT_MENU   = 100
+    VIEW_INSIDE_MENU = 200
 
-    # --- Delete machine from MAME Recently Played machine list ---
-    if idx == 0:
-        log_debug('command_context_manage_mame_recent_played() Delete MAME Recently Played machine')
-        log_debug('command_context_manage_mame_recent_played() Machine_name "{0}"'.format(machine_name))
+    ACTION_DELETE_MACHINE = 100
+    ACTION_DELETE_MISSING = 200
 
-        # >> Load Recently Played machine list
+    menus_dic = {
+        VIEW_ROOT_MENU : [
+            ('Delete missing machines from MAME Recently Played', ACTION_DELETE_MISSING),
+        ],
+        VIEW_INSIDE_MENU : [
+            ('Delete machine from MAME Recently Played', ACTION_DELETE_MACHINE),
+            ('Delete missing machines from MAME Recently Played', ACTION_DELETE_MISSING),
+        ],
+    }
+
+    # --- Determine view type ---
+    log_debug('command_context_manage_mame_recent_played() BEGIN ...')
+    log_debug('machine_name "{0}"'.format(machine_name))
+    if machine_name:
+        view_type = VIEW_INSIDE_MENU
+    else:
+        view_type = VIEW_ROOT_MENU
+    log_debug('view_type = {0}'.format(view_type))
+
+    # --- Build menu base on view_type (Polymorphic menu, determine action) ---
+    d_list = [menu[0] for menu in menus_dic[view_type]]
+    selected_value = xbmcgui.Dialog().select('Manage MAME Recently Played machines', d_list)
+    if selected_value < 0: return
+    action = menus_dic[view_type][selected_value][1]
+    log_debug('action = {0}'.format(action))
+
+    # --- Execute actions ---
+    if action == ACTION_DELETE_MACHINE:
+        log_debug('command_context_manage_mame_recent_played() ACTION_DELETE_MACHINE')
+        log_debug('machine_name "{0}"'.format(machine_name))
+
+        # --- Load Recently Played machine list ---
         recent_roms_list = fs_load_JSON_file_list(g_PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath())
 
-        # >> Search index of this machine in the list
+        # --- Search index of this machine in the list ---
         machine_index = fs_locate_idx_by_name(recent_roms_list, machine_name)
         if machine_index < 0:
             a = 'Machine {0} cannot be located in Recently Played list. This is a bug.'
             kodi_dialog_OK(a.format(machine_name))
             return
 
-        # >> Ask user for confirmation.
+        # --- Ask user for confirmation ---
         desc = recent_roms_list[machine_index]['description']
         ret = kodi_dialog_yesno('Delete Machine {0} ({1})?'.format(desc, machine_name))
         if ret < 1: return
 
-        # >> Delete machine
+        # --- Delete machine and save DB ---
         recent_roms_list.pop(machine_index)
-        log_info('command_context_manage_mame_recent_played() Deleted machine "{0}"'.format(machine_name))
-
-        # >> Save Recently Played machine list
+        log_info('Deleted machine "{0}"'.format(machine_name))
         fs_write_JSON_file(g_PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath(), recent_roms_list)
         kodi_refresh_container()
         kodi_notify('Machine {0} deleted from MAME Recently Played'.format(machine_name))
+
+    elif action == ACTION_DELETE_MISSING:
+        log_debug('command_context_manage_mame_recent_played() ACTION_DELETE_MISSING')
+
+        # --- Ensure MAME Catalog have been built ---
+        control_dic = fs_load_JSON_file_dic(g_PATHS.MAIN_CONTROL_PATH.getPath())
+        # mame_check_condition(MAME_CATALOG_BUILT)
+
+        # --- Load databases ---
+        db_files = [
+            ['machines', 'MAME machines main', g_PATHS.MAIN_DB_PATH.getPath()],
+        ]
+        db_dic = fs_load_files(db_files)
+        recent_roms_list = fs_load_JSON_file_list(g_PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath())
+
+        # --- Delete missing MAME machines ---
+        line1_str = 'Delete missing MAME Recently Played ...'
+        pDialog = xbmcgui.DialogProgress()
+        pDialog.create('Advanced MAME Launcher', line1_str)
+        num_deleted_machines = 0
+        if len(recent_roms_list) >= 1:
+            num_iteration = len(recent_roms_list)
+            iteration = 0
+            new_recent_roms_list = []
+            for i, recent_rom in enumerate(recent_roms_list):
+                pDialog.update((iteration*100) // num_iteration, line1_str)
+                fav_key = recent_rom['name']
+                log_debug('Checking Favourite "{0}"'.format(fav_key))
+                if fav_key in db_dic['machines']:
+                    new_recent_roms_list.append(recent_rom)
+                else:
+                    num_deleted_machines += 1
+                iteration += 1
+            fs_write_JSON_file(g_PATHS.MAME_RECENT_PLAYED_FILE_PATH.getPath(), new_recent_roms_list)
+            pDialog.update((iteration*100) // num_iteration, line1_str)
+        else:
+            pDialog.update(100, line1_str)
+        pDialog.close()
+        kodi_refresh_container()
+        if num_deleted_machines > 0:
+            kodi_notify('Deleted {0} missing MAME machines'.format(num_deleted_machines))
+        else:
+            kodi_notify('No missing machines found')
+
+    else:
+        t = 'Wrong action == {0}. This is a bug, please report it.'.format(action)
+        log_error(t)
+        kodi_dialog_OK(t)
 
 def command_show_SL_most_played():
     SL_catalog_dic = fs_load_JSON_file_dic(g_PATHS.SL_INDEX_PATH.getPath())
